# IronGate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust-ci.yml  security.yml
src/: cli.rs  config.rs  dns_verify.rs  lib.rs  main.rs  notifications.rs  stats.rs  types.rs
src/analytics/: ip_tracker.rs  mod.rs  rules.rs  woocommerce.rs
src/dashboard/: mod.rs  static_html.rs  websocket.rs
src/enforcer/: htaccess.rs  mod.rs  ols_restart.rs
src/log_ingestor/: mod.rs  parser.rs
src/persistence/: mod.rs
static/: app.js  index.html  style.css
tests/: test_analytics.rs  test_enforcer.rs  test_htaccess_guard.rs  test_parser.rs  test_phase4.rs
