[package]
name = "irongate"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
linemux = "0.3"
axum = { version = "0.8", features = ["ws", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "1.1"
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12.5"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
hickory-resolver = { version = "0.26", optional = true }

[features]
default = ["webhooks", "dns-verify"]
webhooks = ["dep:reqwest"]
dns-verify = ["dep:hickory-resolver"]

[dev-dependencies]
tempfile = "3.27.0"
